Compile problem on ARM after JDK-8043070

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b36
    • aarch64

      On ARM char is unsigned by default, which causes a warning:

      /export/boris/openjdk/jdk/src/hotspot/share/code/nmethod.hpp: In member function ‘bool nmethod::is_not_installed() const’:
      /export/boris/openjdk/jdk/src/hotspot/share/code/nmethod.hpp:319:67: error: comparison is always false due to limited range of data type [-Werror=type-limits]
         bool is_not_installed() const { return _state == not_installed; }

      A possible solution would be to declare nmethod::_state signed explicitly.

            Assignee:
            Igor Veresov
            Reporter:
            Igor Veresov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: