8191683: Compile problem on ARM after JDK-8043070

Make nmethod::_state explicitly a signed char

Reviewed-by: thartmann